manifests/applications/b4mad-dolt/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    openshift.io/display-name: "dolt sql-server"
  creationTimestamp: null
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
  name: b4mad-dolt
