manifests/applications/b4mad-dolt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dolt-sql-server
spec:
  ports:
    - port: 3306
      targetPort: mysql
      name: mysql
    - port: 9102
      targetPort: metrics
      name: metrics
    - port: 22222
      targetPort: remotesapi
      name: remotesapi
  type: ClusterIP
