manifests/applications/b4mad-dolt/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: dolt-sql-server
spec:
  host: dolt.b4mad.industries
  to:
    kind: Service
    name: dolt-sql-server
  port:
    targetPort: mysql
  tls:
    termination: passthrough
